erDiagram
  auth_users ||--o| auth_credentials : has_active
  auth_users ||--o{ auth_sessions : owns
  auth_users ||--o{ auth_email_verification_tokens : receives
  auth_users ||--o{ auth_password_reset_tokens : receives
  auth_credentials {
    uuid credential_id PK
    uuid user_id FK
    text password_hash
    text password_hash_version
    boolean force_rehash
    timestamptz last_verified_at
    timestamptz revoked_at
  }
